Tue Nov 17 16:49:12 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added #include <config.h> to all top-level source files

	* plain.c (gsl_monte_plain_integrate): replaced myMAX by GSL_MAX

	* utils.c: move macros around to avoid double definition

Fri Aug 14 10:12:06 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* Makefile.am: I needed to add utils.h to libgslmonte_a_SOURCES to
 	get it to work with my automake

Thu Jul 30 17:31:29 1998  booth  <booth@planck.pha.jhu.edu>

	* gsl_monte_miser.h, miser.c:
	Turn off the annoying warning in miser unless the user requests it.

Wed Jul 29 20:24:54 1998  bjg  <bjg@vvv.lanl.gov>

	* Makefile.am, Makefile.in: some fixes to pass make distcheck

	* Makefile.am, Makefile.in:
	experimenting with new top level makefile.am

Tue Jul 28 17:05:20 1998  booth  <booth@planck.pha.jhu.edu>

	* plain.c, vegas.c, miser.c:
	make all the _free functions check their argument.  Also, the init functions
	now throw EFAULT if given a null pointer.

	* gsl_monte_vegas.h, vegas.c:
	vegas1, vegas2 and vegas3 all go away.  Get them by setting the "stage"
	variabe appropriately.  Also, make _free check its argument.

	* vegas.c, gsl_monte_vegas.h: minor cleanup prior to be change.

	* vegas.c: minor changes, commiting by accident.

Mon Jul 27 22:52:49 1998  bjg  <bjg@vvv.lanl.gov>

	* Makefile.in, Makefile.am:
	fixed some of the include requirements for make dist

Mon Jul 27 15:19:54 1998  booth  <booth@planck.pha.jhu.edu>

	* vegas_print.h, vegas_test.c, miser_test.c, vegas-print.c, vegas.c, Attic/gsl_vegas.h, Attic/gsl_vegas_print.h, gsl_monte_vegas.h, miser.c, Attic/gsl_miser.h, Makefile.am, Makefile.in, gsl_monte_miser.h:
	Renamed public header files to follow convention correctly.

	* vegas.c, vegas_test.c, miser.c, miser_test.c, plain.c, plain_test.c, Attic/gsl_miser.h, Attic/gsl_vegas.h, gsl_monte_plain.h:
	All the integration functions now end with _integrate (except for
	vegas1, vegas2 and vegas3 which are going away RSN).
