@@ -6,7 +6,7 @@ noinst_LIBRARIES = libgslmonte.a
 
 libgslmonte_a_SOURCES = vegas.c vegas-print.c vegas_print.h miser.c plain.c \
 			gsl_monte_vegas.h gsl_monte_miser.h gsl_monte_plain.h \
-			gsl_monte.h utils.c utils.h source.h 
+			gsl_monte.h utils.c utils.h
 
 EXTRA_libgslmonte_a_SOURCES = init_source.c
 
@@ -16,7 +16,7 @@ include_HEADERS = gsl_monte_vegas.h gsl_monte_miser.h gsl_monte_plain.h \
 		  gsl_monte.h
 
 #noinst_HEADERS = vegas.h
-noinst_HEADERS = utils.h source.h init_source.c vegas_print.h
+noinst_HEADERS = utils.h init_source.c vegas_print.h
 
 INCLUDES = -I$(srcdir)/../ -I$(srcdir)/../err -I$(srcdir)/../rng/ \
 		-I$(srcdir)/../vector/
