@@ -1,3 +1,8 @@
+Wed Nov 18 10:59:56 1998  Brian Gough  <bjg@vvv.lanl.gov>
+
+	* use standard headers templates_on.h and templates_off.h instead
+ 	of source.h
+
 Tue Nov 17 16:49:12 1998  Brian Gough  <bjg@vvv.lanl.gov>
 
 	* added #include <config.h> to all top-level source files
